--- a/overview/main.html
+++ b/overview/main.html
@@ -1,3 +1,6 @@
 ﻿<div class="main-content">
     <h1>Overview</h1>
+    <p>
+        An Angular Material animated master details example with the UI Router
+    </p>
 </div>
